--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,6 @@
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.14",
-    "vite": "^7.1.7"
+    "tailwindcss": "^3.4.18"
   }
 }
