feat: add Dockerfile, docker compose, db.sql

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -21,7 +21,8 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=pgsql
-DB_HOST=127.0.0.1
+DB_HOST=127.0.0.1     #untuk run projek di lokal pakai yang ini
+# DB_HOST=db              #untuk run projek di docker pakai yang ini
 DB_PORT=5432
 DB_DATABASE=task_management
 DB_USERNAME=postgres
